--- a/src/templates/recipes.html
+++ b/src/templates/recipes.html
@@ -1,11 +1,37 @@
 {% extends 'base.html' %}
 {% block main %}
-        <form action="" method="POST" novalidate>
-            {{ form.hidden_tag() }}
-            <p>{{ form.number.label }} <br> {{ form.number(size=10) }}</p>
-            <p>{{form.title.label}} <br> {{form.title(size=50)}}</p>
-            <p>{{form.type.label}} <br> {{form.type}}</p>
-            <p>{{form.tags.label}} <br> {{form.tags(size=50)}}</p>
-            <p>{{ form.submit() }}</p>
-        </form>
+    <!-- TODO #1a: show the name of the user -->
+    <p>{{ current_user.name }}'s Recipes</p>
+    <table>
+        <tr>
+            <th>#</th>
+            <th>Title</th>
+            <th>Type</th>
+            <th>Tags#</th>
+            <th>Action</th>
+        </tr>
+        <!-- TODO #1b: show the user's recipes on the table -->
+        {% for recipe in current_user.recipes %}
+        <tr>
+            <td>{{ recipe.number }}</td>
+            <td>{{ recipe.title }}</td>
+            <td>{{ recipe.type }}</td>
+            <td>{{ recipe.tags }}</td>
+            <td><button onclick="confirmed_action('{{ url_for('recipes_delete', number=recipe.number) }}')">Delete</button></td>
+        </tr>
+        {% endfor %}
+        
+    </table>
+    <p />
+    <button type="button" class="button" onclick="simple_action('{{ url_for('signout') }}')">Sign Out</button>&nbsp;&nbsp;<button type="button" class="button" onclick="simple_action('{{ url_for('recipes_create') }}')">New Recipe</button>
+    <script type="text/javascript">
+        function simple_action(target) {
+            window.location = target
+        }
+        function confirmed_action(target) {
+                if (confirm('Are you sure?')) {
+                    window.location = target
+                }
+            }
+    </script>
 {% endblock %}
