--- a/src/static/style.css
+++ b/src/static/style.css
@@ -1,39 +1,87 @@
+* {
+  margin: 0;
+  padding: 5px;
+  box-sizing: border-box;
+  border-radius: 5px;
+  border: 0px;
+}
+
+head {
+  padding: 1rem 3rem;
+  display: inline;
+  width: 100%;
+}
+
 body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin: 0;
+  padding: 4rem 1rem;
+  background-color: #0c0a09;
+  color: #ecebea;
   font-family: Arial, Helvetica, sans-serif;
   font-size: medium;
 }
 
 h1 {
-  color: navy;
-  margin-left: 20px;
+  color: rgb(60, 60, 212);
+  padding: 0rem 0rem 1rem 0rem;
+}
+
+p {
+  padding: 5px;
 }
 
 table, th, td {
-  border: 1px solid;
-  padding: 5px
+  border: 1px solid #ecebea;
+  padding: 5px;
 }
 
 th {
-  background-color: darkblue;
-  color: white
+  background-color: rgb(60, 60, 212);
+  color: #ecebea;
 }
-
-input[type=submit] {
-  background-color: darkblue;
-  color: white;
-}
-
-
 
 .odd_row {
-  background-color: white;
+  background-color: #0c0a09;
 }
 
 .even_row {
-  background-color: lightgray;
+  background-color: rgb(196, 201, 255);
+  color: #0c0a09;
+}
+
+.delete_button {
+  margin: 15px;
+  padding: 7px;
+  background-color: rgb(234, 118, 118);
+  color: #0c0a09;
+  border-radius: 10px;
+}
+
+.delete_button.hover {
+  margin: 15px;
+  padding: 7px;
+  background-color: rgb(248, 74, 74);
+  color: #0c0a09;
+  border-radius: 10px;
 }
 
 .button {
-  background-color: darkblue;
-  color: white;
+  margin: 15px;
+  padding: 7px;
+  background-color: rgb(196, 201, 255);
+  color: #0c0a09;
+  border-radius: 10px;
+}
+
+.button:hover {
+  background-color: rgb(167, 255, 251);
+}
+
+input[type=submit] {
+  background-color: rgb(196, 201, 255);
+  color: #0c0a09;
 }
