--- a/src/static/style.css
+++ b/src/static/style.css
@@ -18,7 +18,7 @@ body {
   justify-content: center;
   flex-direction: column;
   margin: 0;
-  padding: 4rem 1rem;
+  padding: 3rem 1rem;
   background-color: #0c0a09;
   color: #ecebea;
   font-family: Arial, Helvetica, sans-serif;
@@ -49,7 +49,7 @@ th {
 }
 
 .even_row {
-  background-color: rgb(196, 201, 255);
+  background-color: rgb(124, 128, 168);
   color: #0c0a09;
 }
 
@@ -61,7 +61,7 @@ th {
   border-radius: 10px;
 }
 
-.delete_button.hover {
+.delete_button:hover {
   margin: 15px;
   padding: 7px;
   background-color: rgb(248, 74, 74);
