Remove unnecessary files and code.

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block main %}
-    Welcome! 
+    <h2>Welcome To Sol Systems' Online Order Manager!</h2> 
     <p />
     Please, choose an option below:
     <p />
