--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block main %}
+    <h2>Login</h2>
         <form action="" method="POST" novalidate>
             {{ form.hidden_tag() }}
             <p>{{ form.id.label }} <br> {{ form.id(size=15) }}</p>
